--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -4,8 +4,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_transaction">Buat Transaksi</string>
     <string name="balance">Saldo</string>
-    <string name="income">Pengeluaran</string>
-    <string name="expense">Pemasukan</string>
+    <string name="expense">Pengeluaran</string>
+    <string name="income">Pemasukan</string>
     <string name="save_action">Simpan</string>
     <string name="amount">Jumlah</string>
     <string name="description">Deskripsi</string>
