--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,10 +4,14 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="create_transaction">Create Transaction</string>
     <string name="balance">Balance</string>
-    <string name="income">Expense</string>
-    <string name="expense">Income</string>
+    <string name="expense">Expense</string>
+    <string name="income">Income</string>
     <string name="save_action">Save</string>
     <string name="amount">Amount</string>
     <string name="description">Description</string>
     <string name="type">Type</string>
+    <string name="delete_action">Delete</string>
+    <string name="delete_question">Are you sure ?</string>
+    <string name="no">no</string>
+    <string name="yes">Yes</string>
 </resources>
